# Granite

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPLOYMENT_AND_PERFORMANCE.md  INSTALLATION.md  LICENSE  README.md  Stabilizing GRANITE Numerical Relativity Engine.md  pyproject.toml  run_granite.py  setup_windows.ps1  walkthrough.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .codecov.yml  ci.yml  codeql.yml  docs.yml
benchmarks/: README.md  validation_tests.yaml
benchmarks/B2_eq/: params.yaml
benchmarks/B5_star/: params.yaml
benchmarks/gauge_wave/: params.yaml
benchmarks/scaling_tests/: README.md  pbs_submit.sh  slurm_submit.sh
benchmarks/single_puncture/: params.yaml
containers/: Dockerfile  README.md  granite.def
docs/: BENCHMARKS.md  COMMUNITY_SECTION.md  COMPARISON.md  DEPLOYMENT_AND_PERFORMANCE.md  DEVELOPER_GUIDE.md  Developer_Guide  FAQ.md  INSTALL.md  INSTALLATION.md  PERSONAL_NOTE.md  README.md  SCIENCE.md  VISION.md  WINDOWS_README.md  citation.bib  conf.py  diagnostic_handbook.md  index.rst  v0.6.5_master_dictionary.md
docs/design/: DEVELOPMENT_JOURNAL.md  GENESIS_AND_ARCHITECTURE.md  PERSONAL_NOTE.md  VISION.md
docs/developer_guide/: COMPARISON.md  DEVELOPER_GUIDE.md  v0.6.5_master_dictionary.md
docs/getting_started/: Installation.md  WINDOWS_README.md
docs/internal/: GRANITE_CLAUDE_TASK_CATALOG.md  GRANITE_FULL_AUDIT.md  NAN_DEBUG_BRIEF.md
docs/paper/: granite_preprint_v067.tex
docs/paper/figures/: generate_figures.py
docs/theory/: SCIENCE.md  amr.rst  ccz4.rst  grmhd.rst  gw_extraction.rst  index.rst  initial_data.rst  radiation.rst
docs/user_guide/: BENCHMARKS.md  DEPLOYMENT_AND_PERFORMANCE.md  FAQ.md  INSTALLATION.rst  diagnostic_handbook.md  installation.rst
include/: README.md
include/granite/amr/: amr.hpp
include/granite/core/: grid.hpp  types.hpp
include/granite/grmhd/: grmhd.hpp  tabulated_eos.hpp
include/granite/horizon/: horizon_finder.hpp
include/granite/initial_data/: initial_data.hpp
include/granite/io/: hdf5_io.hpp
include/granite/neutrino/: neutrino.hpp
include/granite/postprocess/: postprocess.hpp
include/granite/radiation/: m1.hpp
include/granite/spacetime/: ccz4.hpp
python/: README.md  requirements.txt
python/granite_analysis/: __init__.py  gw.py  plotting.py  reader.py
python/granite_analysis/cli/: __init__.py  dev_benchmark.py  sim_tracker.py
python/granite_analysis/core/: __init__.py  models.py  parsers.py  runners.py
python/granite_analysis/diagnostics/: __init__.py
python/granite_analysis/io/: __init__.py
python/granite_analysis/utils/: __init__.py  ui.py
python/granite_analysis/viz/: __init__.py
scripts/: README.md  dev_benchmark.py  dev_stability_test.py  health_check.py  run_granite.py  run_granite_hpc.py  setup_windows.ps1  sim_tracker.py
src/: README.md  main.cpp
src/amr/: amr.cpp
src/core/: grid.cpp
src/grmhd/: grmhd.cpp  hlld.cpp  tabulated_eos.cpp
src/horizon/: horizon_finder.cpp
src/initial_data/: initial_data.cpp
src/io/: hdf5_io.cpp
src/neutrino/: neutrino.cpp
src/postprocess/: postprocess.cpp
src/radiation/: m1.cpp
src/spacetime/: ccz4.cpp
tests/: CMakeLists.txt  README.md
tests/amr/: test_amr_basic.cpp
tests/core/: test_grid.cpp  test_types.cpp
tests/grmhd/: test_grmhd_gr.cpp  test_hlld_ct.cpp  test_ppm.cpp  test_tabulated_eos.cpp
tests/horizon/: test_schwarzschild_horizon.cpp
tests/initial_data/: test_brill_lindquist.cpp  test_polytrope.cpp
tests/io/: test_hdf5_roundtrip.cpp
tests/python/: test_parsers.py
tests/radiation/: test_m1_diffusion.cpp
tests/spacetime/: test_ccz4_flat.cpp  test_gauge_wave.cpp
viz/: README.md
viz/vortex_eternity/: README.md  VORTEX ETERNITY — Numerical Relativity N-Body Engine.html  VORTEX-engine.html
